fix: change responsive spacing
The meadia queries for the about us container were
leaving a window without any margin or padding, so
a fixed margin is now used instead.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -458,6 +458,10 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+.about {
+    margin-top: 120px;
+    padding-bottom: 60px;
+}
 .about .content {
     background-color: #f6f9ff;
     padding: 40px;
@@ -506,17 +510,17 @@ section {
 .about .about-img {
     text-align: right;
 }
-@media (min-width: 1024px) {
-    .about {
+@media (min-width: 992px) {
+    /* .about {
         margin-top: 120px;
         background-attachment: fixed;
-    }
+    } */
 }
 @media (max-width: 991px) {
-    .about {
+    /* .about {
         height: auto;
         padding: 120px 0 60px 0;
-    }
+    } */
     .about .about-img {
         text-align: center;
         margin-top: 80px;
